first commit in div after mergin both

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>My Site</title>
 </head>
 <body>
-  <h1> on div branch started!!</h1>
+  <h1> first commit after mergin in div</h1>
 </body>
 </html>
