commit in own master

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>My Site</title>
 </head>
 <body>
+  <h1>master started with own line</h1>
   <h1> on div branch started!!</h1>
 </body>
 </html>
